2002-12-05  Pavel Roskin  <proski@gnu.org>

	* ftpfs.c: Define INADDR_NONE if it's not already defined.
	Needed for Solaris 9.
	Reported by Roman Dorokhin <dorokhin@cybermail.net>

2002-12-03  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs.c (open_archive): Don't use open_error_pipe() and
	close_error_pipe() - it gets stuck on output that exceeds 4
	kilobytes.

2002-12-01  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs.c (open_archive): Use open_error_pipe() and close_error_pipe()
	to prevent stderr from extfs scripts pollute the screen.
	(extfs_cmd): New function to run extfs scripts and handle stderr in one
	place.
	(extfs_open): Use extfs_cmd().
	(extfs_close): Likewise.
	(extfs_unlink): Likewise.
	(extfs_mkdir): Likewise.
	(extfs_rmdir): Likewise.

2002-12-01  Pavel Roskin  <proski@gnu.org>

	* extfs/Makefile.am: Add uzip to EXTFS_OUT.

2002-11-16  Pavel Roskin  <proski@gnu.org>

	* mcserv.c (do_classic_auth): Restore support for shadow
	passwords.  Use crypt() instead of pw_encrypt() - the later is
	missing on Slackware 8.0.  Reported by
	Christian Laubscher <christian.laubscher@tiscalinet.ch>

	* Makefile.am: Consolidate mcserv libraries into MCSERVLIBS.

2002-11-15  Pavel Roskin  <proski@gnu.org>

	* mcserv.c: Include getopt.h, don't redefine optarg.

	* names.c: Only leave actually used functions.

	* ftpfs.c (ftpfs_open_socket): Use INADDR_NONE, not -1.

2002-11-12  Pavel Roskin  <proski@gnu.org>

	* fish.c (fish_which): Remove.

2002-11-12  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* ftpfs.c (linear_abort): Close data socket dsock.

2002-11-11  Pavel Roskin  <proski@gnu.org>

	* vfs.h [USE_VFS] (mc_setctl): Specify argument types.

	* cpio.c (cpiofs_data): Warning fix in initization.
	* tar.c (tarfs_data): Likewise.

	* vfs.c: Leave only necessary includes from ../src.

2002-11-10  Pavel Roskin  <proski@gnu.org>

	* vfs.c: Make the last argument to MC_OP non-empty in the
	definition of MC_HANDLEOP.  Needed for Mac OS X.